# TrueValue

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  justfile
backend/: .env.example  README.md  piccolo_conf.py  pyproject.toml
backend/app/: main.py  piccolo_app.py  settings.py
backend/app/ai/: __init__.py  client.py  matchmaking.py  prompts.py  scoring.py  valuation.py
backend/app/api/ai/: __init__.py  leads.py  matchmaking.py  valuation.py
backend/app/api/crm/: __init__.py  leads.py  measurements.py  properties.py  sales.py  showings.py  stats.py  users.py  visitor_events.py
backend/app/api/edge/: __init__.py  vision.py
backend/app/schemas/: ai.py  leads.py  measurements.py  properties.py  sales.py  showings.py  stats.py  users.py  visitor_events.py
backend/app/seed/: bolivia_data.py
backend/app/tables/: leads.py  measurements.py  properties.py  sales.py  showings.py  users.py  visitor_events.py
backend/piccolo_migrations/: truevalue_2026_05_16t17_01_48_363706.py  truevalue_2026_05_16t21_38_36_592550.py  truevalue_2026_05_16t23_39_11_919572.py  truevalue_2026_05_17t01_41_17_987629.py  truevalue_2026_05_17t07_44_42_280892.py  truevalue_2026_05_17t07_58_42_928528.py
backend/scripts/: create_superuser.py  seed_demo.py
backend/tests/: test_health.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
infra/: docker-compose.jetson.yml  docker-compose.yml
plans/: Arquitectura General Alto Nivel_ TrueValue.md  Implementation_Report_Backend_v1.md  Implementation_Report_Frontend_v1.md  challenge.md  pitch.md  (+3 more)
(+32 files in other folders)
